stretch fixed

--- a/src/index.css
+++ b/src/index.css
@@ -96,6 +96,8 @@ nav{
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
   gap: 20px;
+  align-items: flex-start;
+  justify-items: center;
 }
 
 .fixedNav{
